# football

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.ee4a785  award.cpp  award.h  broadcaster.cpp  broadcaster.h  config  config.cpp  config.h  customextendablemodel.cpp  customextendablemodel.h  dataroles.h  deploy.bat  featuredstats.cpp  featuredstats.h  featuredstatsmodel.cpp  featuredstatsmodel.h  gamefiltermodel.cpp  gamefiltermodel.h  games  gamesmodel.cpp  gamesmodel.h  globalstatsmodel.cpp  globalstatsmodel.h  language.cpp  language.h  main.cpp  personalstatsmodel.cpp  personalstatsmodel.h  player.cpp  player.h  playerbase.cpp  playerbase.h  players  playersmodel.cpp  playersmodel.h  playersortfilterproxymodel.cpp  playersortfilterproxymodel.h  playerstatsmodel.cpp  (+14 more)
data/: 87s4bdv39m3dqu8  players
qml/: ColoredImage.qml  ContentTab.qml  CustomTabView.qml  InfoButton.qml  PlayerAvatar.qml  Pulse.qml  Seasoner.qml  Slideshow.qml  ThemeSwitcher.qml  TiledBackground.qml  UpdaterWindow.qml  main.qml
qml/Awards/: CompletedSeasonAwards.qml  CurrentSeasonAwardRace.qml
qml/FeaturedStats/: GroupedImageRow.qml  SlideContent.qml  SlideshowWing.qml
qml/NewGame/: GameComposer.qml  PitchScheme.qml  PitchZones.qml  PlayerHandle.qml  qmldir
qml/NextGame/: GameComposer.qml  GameOutcomeForm.qml  OutcomeForm.qml  PitchScheme.qml  PlayerHandle.qml  TeamControlPanel.qml
qml/Players/: Chart.qml  CustomTableView.qml  PlayerPage.qml  PlayerStatsTable.qml  StatsTable.qml
qml/visualStyles/: Sizes.qml  Themes.qml  qmldir
qt_zip/: zip.cpp  zipreader.h  zipwriter.h
